# proven-node

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  LICENCE  Makefile  README.md  babel.config.js  eslint.config.js  fix_cargo_toml.sh  jest.config.base.js  jest.config.js  jest.setup.js  migrate_to_logger.sh  package-lock.json  package.json  proven.service  run-cluster.sh  run-integration-tests.sh  run-nats-cluster.sh  rustfmt.toml  setup-hooks.sh  tsconfig.base.json  tsconfig.json  upnp-setup.sh  upnp-teardown.sh
crates/applications/: Cargo.toml
crates/applications/sql/: 01_create_applications.sql  create_applications.sql  create_dapp_definition.sql
crates/applications/src/: application.rs  command.rs  consumer.rs  coordination.rs  error.rs  event.rs  events.rs  lib.rs  request.rs  response.rs  service.rs  service_handler.rs  view.rs
crates/applications/tests/: integration_test.rs
crates/attestation-dev/: Cargo.toml
crates/attestation-dev/src/: error.rs  lib.rs
crates/attestation-mock/: Cargo.toml
crates/attestation-mock/src/: error.rs  lib.rs
crates/attestation-nsm/: Cargo.toml
crates/attestation-nsm/src/: error.rs  lib.rs  nsm.rs
crates/bitcoin-core/: Cargo.toml
crates/bitcoin-core/examples/: run_node.rs  run_persistent_node.rs  run_regtest.rs  run_signet.rs
crates/bitcoin-core/src/: error.rs  lib.rs
crates/cert-store/: Cargo.toml
crates/cert-store/src/: error.rs  lib.rs
crates/code-package/: Cargo.toml
crates/code-package/src/: error.rs  lib.rs  manifest.rs  npm_resolver.rs  package_json.rs  resolver.rs
crates/consensus/: Cargo.toml
crates/consensus/src/: allocation.rs  attestation.rs  builder.rs  client.rs  config.rs  consensus.rs  consensus_manager.rs  consensus_subject.rs  cose.rs  engine.rs  error.rs  global_manager.rs  group_id.rs  hierarchical_orchestrator.rs  lib.rs  messaging.rs  migration.rs  monitoring.rs  network.rs  node.rs  node_id.rs  operations.rs  orchestrator.rs  raft_network.rs  raft_state_machine.rs  router.rs  snapshot.rs  state_machine.rs  storage.rs  stream_store.rs  subject.rs  subscription.rs  test_helpers.rs  topology.rs  types.rs  verification.rs
crates/consensus/tests/: cluster_test.rs  consensus_tests.rs  engine_integration.rs  group_allocator.rs  hierarchical_integration_test.rs  integration_test.rs  multi_node_test.rs  pubsub_integration_test.rs  rocksdb_basic_ops_test.rs  rocksdb_basic_test.rs  rocksdb_simple_test.rs  rocksdb_storage_test.rs  rocksdb_stream_test.rs  test_helpers_demo.rs  topology_test.rs
crates/core/: .gitignore  Cargo.toml  build.rs  esbuild.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/core/examples/: request_cbor.rs
crates/core/src/: application.rs  application_http.rs  error.rs  full.rs  lib.rs  light.rs  router.rs  rpc.rs  sessions.rs  state.rs  unified.rs  utils.rs
crates/core/static/: Encrypt.js.map  button.html  common.ts  iframe.html  iframe.ts  register.html  sdk.ts  sessions.js.map  sessions.ts  types.ts  utils.js.map  webauthn.html  webauthn.js.map  webauthn.ts  ws-worker.ts
crates/core/test/: iframe-test.html  sdk-test.html  server.js
crates/dnscrypt-proxy/: Cargo.toml
crates/dnscrypt-proxy/src/: error.rs  lib.rs
crates/dnscrypt-proxy/templates/: dnscrypt-proxy.toml
crates/enclave/: Cargo.toml
crates/enclave/src/: bootstrap.rs  enclave.rs  error.rs  fdlimit.rs  linux.rs  main.rs  net.rs  node.rs  speedtest.rs
crates/enclave/test_data/: speedtest.json
crates/engine/: Cargo.toml
crates/engine/src/: builder.rs  client.rs  config.rs  coordinator.rs  engine.rs  error.rs  lib.rs
crates/engine/tests/: cluster_test.rs  consensus_scenarios_test.rs  default_group_test.rs  engine_integration.rs  global_consensus_test.rs  persistence_test.rs  pubsub_integration_test.rs  pubsub_request_reply_test.rs  pubsub_streaming_test.rs  pubsub_test.rs  raft_membership_test.rs  rocksdb_basic_test.rs  stream_default_group_test.rs  stream_follow_mode_test.rs  stream_idempotent_test.rs  stream_integration.rs  stream_late_join_test.rs
crates/ethereum-geth/: Cargo.toml
crates/ethereum-geth/src/: lib.rs
crates/ethereum-lighthouse/: Cargo.toml
crates/ethereum-lighthouse/examples/: run.rs  run_lighthouse.rs
crates/ethereum-lighthouse/src/: error.rs  lib.rs
crates/ethereum-reth/: Cargo.toml
crates/ethereum-reth/examples/: run.rs  run_reth.rs
crates/ethereum-reth/src/: error.rs  lib.rs
crates/gateway/: Cargo.toml  build.rs  tsconfig.json  vite.config.ts
crates/gateway/src/: lib.rs  router.rs  state.rs
crates/governance-helios/: Cargo.toml
crates/governance-helios/examples/: test.rs
crates/governance-helios/src/: error.rs  lib.rs
crates/governance-mock/: Cargo.toml
crates/governance-mock/examples/: basic_usage.rs
crates/governance-mock/src/: config.rs  error.rs  lib.rs
crates/hlc-time-sync/: Cargo.toml  chrony-macos.conf  chrony.conf
crates/hlc-time-sync/src/: adaptive.rs  chrony.rs  client.rs  constants.rs  error.rs  lib.rs  messages.rs  nts.rs  server.rs
crates/hlc-time-sync/tests/: integration_test.rs
crates/host/: Cargo.toml
crates/host/src/: commands.rs  error.rs  linux.rs  main.rs  net.rs  nitro.rs  systemctl.rs
crates/host/templates/: allocator.yaml
crates/host/test_data/: describe-enclaves.json
crates/http-insecure/: Cargo.toml
crates/http-insecure/src/: error.rs  lib.rs
crates/http-letsencrypt/: Cargo.toml
crates/http-letsencrypt/src/: acceptor.rs  cert_cache.rs  error.rs  lib.rs  multi_acceptor.rs  multi_resolver.rs
crates/http-proxy/: Cargo.toml
crates/http-proxy/src/: client.rs  error.rs  lib.rs  request.rs  response.rs  service.rs
crates/http-proxy/tests/: integration_test.rs
crates/identity/: Cargo.toml
crates/identity/sql/: 01_create_identities.sql  02_create_linked_passkeys.sql
crates/identity/src/: command.rs  consumer.rs  coordination.rs  error.rs  event.rs  events.rs  identity.rs  ledger_identity.rs  (+9 more)
crates/imds/: Cargo.toml
crates/isolation/: Cargo.toml
crates/kms/: Cargo.toml
crates/libsql/: Cargo.toml
crates/local-cli/: Cargo.toml  run_three_instances.sh
(+1711 files in other folders)
