[workspace.package]
rust-version = "1.80"
authors = ["Proven Labs Pte Ltd"]
edition = "2021"
license = "FSL-1.1-MIT"
repository = "https://github.com/proven-network/proven-node"

[workspace]
resolver = "2"
members = [
    "crates/applications",
    "crates/attestation",
    "crates/attestation-dev",
    "crates/attestation-nsm",
    "crates/code-package",
    "crates/core",
    "crates/dnscrypt-proxy",
    "crates/enclave",
    "crates/external-fs",
    "crates/governance",
    "crates/governance-helios",
    "crates/governance-mock",
    "crates/host",
    "crates/http",
    "crates/http-insecure",
    "crates/http-letsencrypt",
    "crates/instance-details",
    "crates/imds",
    "crates/kms",
    "crates/libsql",
    "crates/local",
    "crates/locks",
    "crates/locks-memory",
    "crates/messaging",
    "crates/messaging-memory",
    "crates/messaging-nats",
    "crates/nats-monitor",
    "crates/nats-server",
    "crates/postgres",
    "crates/radix-aggregator",
    "crates/radix-gateway",
    "crates/radix-gateway-sdk",
    "crates/radix-nft-verifier",
    "crates/radix-nft-verifier-gateway",
    "crates/radix-nft-verifier-mock",
    "crates/radix-node",
    "crates/radix-rola",
    "crates/radix-stream",
    "crates/runtime",
    "crates/sessions",
    "crates/sql",
    "crates/sql-direct",
    "crates/sql-streamed",
    "crates/store",
    "crates/store-asm",
    "crates/store-fs",
    "crates/store-memory",
    "crates/store-nats",
    "crates/store-s3",
    "crates/vsock-proxy",
    "crates/vsock-rpc",
    "crates/vsock-tracing",
]

[workspace.dependencies]
aes = "0.8.4"
alloy = { version = "0.9.2", features = [
    "rpc-types",
    "consensus",
    "rlp",
    "k256",
    "provider-http",
    "sol-types",
    "network",
    "ssz",
    "json-rpc",
    "signers",
] }
alloy-sol-types = "0.8.21"
anyhow = "1.0.95"
asn1-rs = "0.7.0"
async-nats = "0.38.0"
async-once-cell = "0.5.4"
async-stream = "0.3"
async-trait = "0.1.85"
aws-config = { version = "1.5.15", features = ["behavior-version-latest"] }
aws-nitro-enclaves-nsm-api = { git = "https://github.com/proven-network/aws-nitro-enclaves-nsm-api", branch = "main" }
aws-sdk-ec2 = "1.107.0"
aws-sdk-kms = "1.58.0"
aws-sdk-route53resolver = "1.62.0"
aws-sdk-s3 = "1.72.0"
aws-sdk-secretsmanager = "1.61.0"
axum = { version = "0.8.1", features = ["ws"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
axum-server = { version = "0.7.1", features = ["tls-rustls-no-provider"] }
axum_typed_multipart = "0.15.1"
base32 = "=0.5.1"
base64 = "0.22.1"
bech32 = "0.11.0"
bencher = "0.1"
blake3 = "1.5.5"
block-padding = { version = "0.3.3", features = ["std"] }
boxed_error = "0.2.3"
brotli = "6.0.0"
bytes = { version = "1.9.0", features = ["serde"] }
cache_control = "=0.2.0"
capacity_builder = "0.5.0"
cbc = { version = "=0.1.2", features = ["alloc"] }
chrono = { version = "0.4.26", features = ["serde"] }
ciborium = "0.2"
cidr = { version = "0.3.1", features = ["serde"] }
clap = { version = "4.5.27", features = ["derive", "env"] }
color-print = "0.3.5"
console = "0.15.7"
console_static_text = "0.8.2"
coset = { version = "0.3.8", features = ["std"] }
criterion = { version = "0.5.1", features = ["async_tokio"] }
ctr = { version = "0.9.2", features = ["alloc"] }
dashmap = "6.1.0"
data-encoding = "2.7.0"
data-url = "0.3.1"
deno_ast = { version = "0.44.0", features = ["transpiling"] }
deno_bench_util = { path = "vendor/deno/bench_util" }
deno_broadcast_channel = { path = "vendor/deno/ext/broadcast_channel" }
deno_cache = { path = "vendor/deno/ext/cache" }
deno_cache_dir = "0.17.0"
deno_canvas = { path = "vendor/deno/ext/canvas" }
deno_config = { version = "0.46.0", features = ["workspace", "sync"] }
deno_console = { path = "vendor/deno/ext/console" }
deno_core = "0.333.0"
deno_cron = { path = "vendor/deno/ext/cron" }
deno_crypto = { path = "vendor/deno/ext/crypto" }
deno_error = "=0.5.5"
deno_fetch = { path = "vendor/deno/ext/fetch" }
deno_ffi = { path = "vendor/deno/ext/ffi" }
deno_fs = { path = "vendor/deno/ext/fs" }
deno_graph = "0.87.2"
deno_http = { path = "vendor/deno/ext/http" }
deno_io = { path = "vendor/deno/ext/io" }
deno_kv = { path = "vendor/deno/ext/kv" }
deno_lib = { path = "vendor/deno/cli/lib" }
deno_media_type = { version = "0.2.5", features = ["module_specifier"] }
deno_napi = { path = "vendor/deno/ext/napi" }
deno_net = { path = "vendor/deno/ext/net" }
deno_node = { path = "vendor/deno/ext/node" }
deno_npm = "=0.27.2"
deno_npm_cache = { path = "vendor/deno/resolvers/npm_cache" }
deno_os = { path = "vendor/deno/ext/os" }
deno_package_json = { version = "0.4.2", default-features = false }
deno_path_util = "0.3.0"
deno_permissions = { path = "vendor/deno/runtime/permissions" }
deno_process = { path = "vendor/deno/ext/process" }
deno_resolver = { path = "vendor/deno/resolvers/deno" }
deno_runtime = { path = "vendor/deno/runtime" }
deno_semver = "0.7.1"
deno_telemetry = { path = "vendor/deno/ext/telemetry" }
deno_terminal = "0.2.0"
deno_tls = { path = "vendor/deno/ext/tls" }
deno_url = { path = "vendor/deno/ext/url" }
deno_unsync = "0.4.2"
deno_web = { path = "vendor/deno/ext/web" }
deno_webgpu = { path = "vendor/deno/ext/webgpu" }
deno_webidl = { path = "vendor/deno/ext/webidl" }
deno_websocket = { path = "vendor/deno/ext/websocket" }
deno_webstorage = { path = "vendor/deno/ext/webstorage" }
denokv_proto = "0.9.0"
denokv_remote = "0.9.0"
# denokv_sqlite brings in bundled sqlite if we don't disable the default features
denokv_sqlite = { default-features = false, path = "vendor/denokv/sqlite" }
derive_more = { version = "1.0.0", features = ["from"] }
dlopen2 = "0.7.0"
dns-stamp-parser = { git = "https://github.com/LinkTed/dns-stamp-parser" }
dotenv = "0.15.0"
dyn-clone = "1"
dynasmrt = "1.2.3"
ecb = "=0.1.2"
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "signature"] }
elliptic-curve = { version = "0.13.8", features = ["alloc", "arithmetic", "ecdh", "std", "pem", "jwk"] }
encoding_rs = "0.8.35"
error_reporter = "1"
eszip = { git = "https://github.com/denoland/eszip" }
eyre = "0.6.12"
fast-socks5 = "0.10.0"
faster-hex = "0.10.0"
fastwebsockets = { version = "0.10.0", features = ["upgrade", "unstable-split"] }
fdlimit = "0.3.0"
filetime = "0.2.16"
flate2 = { version = "1.0.35", default-features = false }
fs3 = "0.5.0"
futures = "0.3.21"
glob = "0.3.2"
h2 = "0.4.7"
headers = "0.4.0"
helios-consensus-core = { git = "https://github.com/a16z/helios" }
helios-core = { git = "https://github.com/a16z/helios" }
helios-ethereum = { git = "https://github.com/a16z/helios" }
hex = "0.4.3"
hickory-proto = { version = "0.25.0-alpha.4", features = ["tokio-runtime"] }
hickory-resolver = { version = "0.25.0-alpha.4", features = ["tokio-runtime", "serde"] }
hkdf = "0.12.3"
http = "1.2.0"
http-body = "1.0"
http-body-util = "0.1.2"
http_v02 = { package = "http", version = "0.2.9" }
httparse = "1.10.0"
httpclient = "0.23.21"
hyper = { version = "1.6.0", features = ["full"] }
hyper-rustls = { version = "0.27.5", default-features = false, features = ["http1", "http2", "tls12", "ring"] }
hyper-util = { version = "0.1.10", features = ["tokio", "client", "client-legacy", "server", "server-auto"] }
hyper_v014 = { package = "hyper", version = "0.14.26", features = ["runtime", "http1"] }
indexmap = { version = "2.7.1", features = ["serde"] }
ipnet = "2.11.0"
junction = "1.2.0"
jsonc-parser = { version = "=0.26.2", features = ["serde"] }
lazy-regex = "3.4.1"
lazy_static = "1.4.0"
libffi = { path = "vendor/libffi-rs/libffi-rs" }
libffi-sys = { path = "vendor/libffi-rs/libffi-sys-rs" }
libsql = { version = "0.6.0", default-features = false, features = ["core", "stream"] }
libsql-ffi = "0.5.0"
libsql-rusqlite = "0.33.0"
libsui = "0.5.0"
libc = "0.2.169"
libz-sys = { version = "1.1.21", default-features = false }
log = { version = "0.4.25", features = ["kv"] }
lsp-types = "=0.97.0"
md5 = "0.7.0"
memmem = "0.1.1"
monch = "=0.5.0"
multi_key_map = "0.3.0"
napi_sym = { path = "vendor/deno/ext/napi/sym" }
nix = { version = "0.27.1", features = ["signal", "user"] }
node_resolver = { path = "vendor/deno/resolvers/node" }
notify = "8.0.0"
num-bigint = { version = "0.4", features = ["rand"] }
once_cell = "1.17.1"
opentelemetry = "0.27.1"
opentelemetry-http = "0.27.0"
opentelemetry-otlp = { version = "0.27.0", features = ["logs", "http-proto", "http-json"] }
opentelemetry-semantic-conventions = { version = "0.27.0", features = ["semconv_experimental"] }
opentelemetry_sdk = "0.27.1"
os_pipe = { version = "1.2.1", features = ["io_safety"] }
p224 = { version = "0.13.0", features = ["ecdh"] }
p256 = { version = "0.13.2", features = ["ecdh", "jwk"] }
p384 = { version = "0.13.0", features = ["ecdh", "jwk"] }
parking_lot = "0.12.0"
paste = "1.0.15"
pem = "3.0.4"
percent-encoding = "2.3.0"
phf = { version = "0.11.3", features = ["macros"] }
pin-project = "1.1.8"
pretty_assertions = "1.4.1"
prettyplease = "0.2.29"
progenitor = "0.9.1"
progenitor-client = "0.9.1"
prost = "0.13.4"
prost-build = "0.13.4"
proven-applications = { path = "crates/applications" }
proven-attestation = { path = "crates/attestation" }
proven-attestation-dev = { path = "crates/attestation-dev" }
proven-attestation-nsm = { path = "crates/attestation-nsm" }
proven-code-package = { path = "crates/code-package" }
proven-core = { path = "crates/core" }
proven-dnscrypt-proxy = { path = "crates/dnscrypt-proxy" }
proven-enclave = { path = "crates/enclave" }
proven-external-fs = { path = "crates/external-fs" }
proven-governance = { path = "crates/governance" }
proven-governance-helios = { path = "crates/governance-helios" }
proven-governance-mock = { path = "crates/governance-mock" }
proven-host = { path = "crates/host" }
proven-http = { path = "crates/http" }
proven-http-insecure = { path = "crates/http-insecure" }
proven-http-letsencrypt = { path = "crates/http-letsencrypt" }
proven-imds = { path = "crates/imds" }
proven-instance-details = { path = "crates/instance-details" }
proven-kms = { path = "crates/kms" }
proven-libsql = { path = "crates/libsql" }
proven-local = { path = "crates/local" }
proven-locks = { path = "crates/locks" }
proven-locks-memory = { path = "crates/locks-memory" }
proven-messaging = { path = "crates/messaging" }
proven-messaging-memory = { path = "crates/messaging-memory" }
proven-messaging-nats = { path = "crates/messaging-nats" }
proven-nats-monitor = { path = "crates/nats-monitor" }
proven-nats-server = { path = "crates/nats-server" }
proven-postgres = { path = "crates/postgres" }
proven-radix-aggregator = { path = "crates/radix-aggregator" }
proven-radix-gateway = { path = "crates/radix-gateway" }
proven-radix-gateway-sdk = { path = "crates/radix-gateway-sdk" }
proven-radix-nft-verifier = { path = "crates/radix-nft-verifier" }
proven-radix-nft-verifier-gateway = { path = "crates/radix-nft-verifier-gateway" }
proven-radix-nft-verifier-mock = { path = "crates/radix-nft-verifier-mock" }
proven-radix-node = { path = "crates/radix-node" }
proven-radix-rola = { path = "crates/radix-rola" }
proven-radix-stream = { path = "crates/radix-stream" }
proven-runtime = { path = "crates/runtime" }
proven-sessions = { path = "crates/sessions" }
proven-sql = { path = "crates/sql" }
proven-sql-direct = { path = "crates/sql-direct" }
proven-sql-streamed = { path = "crates/sql-streamed" }
proven-store = { path = "crates/store" }
proven-store-asm = { path = "crates/store-asm" }
proven-store-fs = { path = "crates/store-fs" }
proven-store-memory = { path = "crates/store-memory" }
proven-store-nats = { path = "crates/store-nats" }
proven-store-s3 = { path = "crates/store-s3" }
proven-vsock-proxy = { path = "crates/vsock-proxy" }
proven-vsock-rpc = { path = "crates/vsock-rpc" }
proven-vsock-tracing = { path = "crates/vsock-tracing" }
quote = "1.0.38"
radix-common = { version = "1.3.0", features = ["secp256k1_sign_and_validate", "serde"] }
radix-transactions = { git = "https://github.com/radixdlt/radixdlt-scrypto", branch = "develop" } # Use crate after next release (deps conflict)
rand = "0.8.5"
raw-window-handle = "0.6.0"
regex = "1.10.6"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls", "stream", "gzip", "brotli", "socks", "json", "http2"] }
ring = "^0.17.0"
rlimit = "0.10.2"
rsa = { version = "0.9.7", default-features = false, features = ["std", "pem", "hazmat"] } # hazmat needed for PrehashSigner in ext/node
rtnetlink = { git = "https://github.com/mwanner/rtnetlink", branch = "deps-update" }
rustls = { version = "0.23.21", default-features = false, features = ["logging", "std", "tls12", "ring"] }
rustls-pemfile = "2"
rustls-tokio-stream = "=0.3.0"
rustls-webpki = "0.102"
rustyline = "=13.0.0"
rustyscript = { path = "vendor/rustyscript", features = ["fs", "web"]}
saffron = "=0.1.0"
scopeguard = "1.2.0"
sec1 = "0.7"
serde = { version = "1.0.218", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0.138"
serde_yaml = "0.9.34+deprecated"
serde-value = "0.7"
serial_test = "3.2.0"
sha1 = { version = "0.10.6", features = ["oid"] }
sha2 = { version = "0.10.8", features = ["oid"] }
signature = "2.2.0"
slab = "0.4"
smallvec = "1.8"
socket2 = { version = "0.5.8", features = ["all"] }
spki = "0.7.3"
strip-ansi-escapes = "0.2.1"
syn = { version = "2.0.96", features = ["full", "extra-traits"] }
sys_traits = "=0.1.7"
systemctl = "0.4.0"
tar = "0.4.43"
tempfile = "3.16.0"
termcolor = "1.1.3"
test_util = { package = "test_server", path = "vendor/deno/tests/util/server" }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-metrics = { version = "0.4.0", features = ["rt"] }
tokio-rustls = { version = "0.26.1", default-features = false, features = ["ring", "tls12"] }
tokio-rustls-acme = { version = "0.6.0", features = ["axum"] }
tokio-socks = "0.5.1"
tokio-stream = "0.1.17"
tokio-tun = "0.13.0"
tokio-util = { version = "0.7.13", features = ["rt"] }
tokio-vsock = "0.7.0"
tower = { version = "0.5.2", default-features = false, features = ["retry", "util"] }
tower-http = { version = "0.6.2", features = ["decompression-br", "decompression-gzip", "cors"] }
tower-service = "0.3.2"
tracing = "0.1.41"
tracing-panic = "0.1.2"
tracing-subscriber = "0.3.19"
twox-hash = "2.1.0"
url = { version = "2.5.4", features = ["serde", "expose_internals"] }
uuid = { version = "1.12.1", features = ["v4"] }
v8_valueserializer = "0.1.1"
webpki-root-certs = "0.26.7"
webpki-roots = "0.26.7"
wgpu-core = "0.21.1"
wgpu-types = "0.20"
which = "6.0.3"
winapi = "=0.3.9"
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_Media", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_WindowsProgramming", "Wdk", "Wdk_System", "Wdk_System_SystemInformation", "Win32_Security", "Win32_System_Pipes", "Wdk_Storage_FileSystem", "Win32_System_Registry", "Win32_System_Kernel"] }
yoke = { version = "0.7.5", features = ["derive"] }
x509-parser = { version = "0.17.0", features = ["ring", "verify"] }
